RESOLVED FIXED101401
Fix build warning in RenderLayer.cpp caused by r133628
https://bugs.webkit.org/show_bug.cgi?id=101401
Summary Fix build warning in RenderLayer.cpp caused by r133628
KyungTae Kim
Reported 2012-11-06 15:19:33 PST
For fixing the below build warning after r133543. Source/WebCore/rendering/RenderLayer.cpp:1888:19: warning: ‘WebCore::FrameView* WebCore::frameViewFromLayer(const WebCore::RenderLayer*)’ defined but not used [-Wunused-function] The static function WebCore::frameViewFromLayer is only used when USE(ACCELERATED_COMPOSITING), so define it only that case seems better.
Attachments
Patch (1.56 KB, patch)
2012-11-06 15:24 PST, KyungTae Kim
no flags
Patch (1.56 KB, patch)
2012-11-06 15:28 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-11-06 15:24:57 PST
KyungTae Kim
Comment 2 2012-11-06 15:28:32 PST
WebKit Review Bot
Comment 3 2012-11-06 15:51:02 PST
Comment on attachment 172663 [details] Patch Clearing flags on attachment: 172663 Committed r133683: <http://trac.webkit.org/changeset/133683>
WebKit Review Bot
Comment 4 2012-11-06 15:51:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.