Fix build warning in RenderLayer.cpp caused by r133628 https://bugs.webkit.org/show_bug.cgi?id=101401

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-06
Reviewed by Simon Fraser.

The static function WebCore::frameViewFromLayer is only used when USE(ACCELERATED_COMPOSITING),
so define it only that case for removing -Wunused-function warning

* rendering/RenderLayer.cpp:
(WebCore):

git-svn-id: svn://svn.chromium.org/blink/trunk@133683 bbb929c8-8fbe-4397-9dbb-9b2b20218538