third_party/WebKit/Source/WebCore/rendering/RenderLayer.cpp
@@ -1886,6 +1886,7 @@ void RenderLayer::scrollRectToVisible(const LayoutRect& rect, const ScrollAlignm
         frameView->resumeScheduledEvents();
 }
 
+#if USE(ACCELERATED_COMPOSITING)
 static FrameView* frameViewFromLayer(const RenderLayer* layer)
 {
     Frame* frame = layer->renderer()->frame();
@@ -1894,6 +1895,7 @@ static FrameView* frameViewFromLayer(const RenderLayer* layer)
 
     return frame->view();
 }
+#endif
 
 void RenderLayer::updateCompositingLayersAfterScroll()
 {
